[gd_scene load_steps=5 format=3 uid="uid://ckafxo2papx13"]

[ext_resource type="Script" path="res://Scenes/RhythmGameControls/target.gd" id="1_2dpjm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ubcss"]

[sub_resource type="CircleShape2D" id="CircleShape2D_17y06"]

[sub_resource type="CircleShape2D" id="CircleShape2D_aqisx"]

[node name="Target" type="Node2D"]
script = ExtResource("1_2dpjm")

[node name="Perfect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Perfect"]
scale = Vector2(0.5, 0.5)
shape = SubResource("CircleShape2D_ubcss")

[node name="Good" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Good"]
shape = SubResource("CircleShape2D_17y06")

[node name="Okay" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Okay"]
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_aqisx")

[connection signal="body_entered" from="Perfect" to="." method="_on_perfect_body_entered"]
[connection signal="body_exited" from="Perfect" to="." method="_on_perfect_body_exited"]
[connection signal="body_entered" from="Good" to="." method="_on_good_body_entered"]
[connection signal="body_exited" from="Good" to="." method="_on_good_body_exited"]
[connection signal="body_entered" from="Okay" to="." method="_on_okay_body_entered"]
[connection signal="body_exited" from="Okay" to="." method="_on_okay_body_exited"]
